--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,11 @@ services:
             MYSQL_DATABASE: ${DB_DATABASE}
             MYSQL_USER: ${DB_USERNAME}
             MYSQL_PASSWORD: ${DB_PASSWORD}
+
+###########################
+# Setup the mailhog container
+###########################
+    mail:
+        image: mailhog/mailhog:latest
+        ports:
+          - "8025:8025"
